# controllers/transactions.js
@@ -7,6 +7,7 @@ const {
   GET_CONSUMPTION_AMOUNT,
   TRANSACTION_CATEGORIES,
   GET_CATEGORY_AMOUNT,
+  TO_CONVERT_TIME,
   GET_BALANCE_AMOUNT,
 } = require("../helpers/constants");
 
@@ -18,11 +19,11 @@ const CATEGORIES = Object.entries(TRANSACTION_CATEGORIES);
 const getAllTransactions = async (req, res, next) => {
   try {
     const userId = req.user.id;
-    const transactions = await Transaction.getAllTransactions(userId);
+    const { docs: transactions, ...rest } = await Transaction.getAllTransactions(userId, req.query);
     return res.status(OK).json({
       status: SUCCESS,
       code: OK,
-      payload: { transactions },
+      payload: { transactions, ...rest },
     });
   } catch (error) {
     next(error);
@@ -33,10 +34,11 @@ const addTransaction = async (req, res, next) => {
   try {
     const userId = req.user.id;
     const { balanceValue } = req.user;
-    const { sort, amount } = req.body;
+    const { sort, amount, time } = req.body;
+
+    const convertedTime = await TO_CONVERT_TIME(time);
     const balance = await GET_BALANCE_AMOUNT(sort, amount, balanceValue);
-    console.log(balance);
-    const transaction = await Transaction.addTransaction(userId, req.body, balance);
+    const transaction = await Transaction.addTransaction(userId, req.body, balance, convertedTime);
 
     await updateBalance(userId, balance);
 
@@ -55,14 +57,14 @@ const getTransactionStatistic = async (req, res, next) => {
   try {
     const userId = req.user.id;
     const { balanceValue } = req.user;
-    const transactions = await Transaction.getAllTransactions(userId);
+    const { docs: transactions, ...rest } = await Transaction.getAllTransactions(userId, req.query);
     const incomeValue = await GET_INCOME_AMOUNT(transactions);
     const consumptionValue = await GET_CONSUMPTION_AMOUNT(transactions);
     const categoriesSummary = await GET_CATEGORY_AMOUNT(transactions, CATEGORIES);
     return res.status(OK).json({
       status: SUCCESS,
       code: OK,
-      payload: { incomeValue, consumptionValue, balanceValue, categoriesSummary },
+      payload: { incomeValue, consumptionValue, balanceValue, categoriesSummary, ...rest },
     });
   } catch (error) {
     next(error);
